# asin-product-details-scraper

./: .gitignore  README.md  amazon_scraper.py  example.csv  example.txt  main.py  parsers.py  project.md  pyproject.toml  requirements.txt  session_pool.py  utils.py
config/: config.json
examples/: example.csv  example.txt
output_debug/: offers_20250408_153513.html  offers_20250408_153516.html  offers_20250408_153521.html  offers_20250408_153524.html  product_page_B07CRG7BBH.html  product_page_B07P9W5HJV.html  product_page_B08DK5ZH44.html  product_page_B09X7CRKRZ.html  product_page_B0BKL64Z9T.html  product_page_B0D4Z899FP.html
src/: __init__.py  amazon_scraper.py  csv_formatter.py  exporter.py  logger.py  parsers.py  scraper.py  session_pool.py  utils.py
