[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asin-product-details-scraper"
version = "0.1.0"
description = "A scraper for Amazon product details"
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = {text = "MIT"}
dependencies = [
    "tls-client==0.2.1",
    "colorama==0.4.6",
    "aiohttp==3.9.1",
    "lxml==5.3.0",
]

[tool.setuptools]
packages = ["src"] 